# thinkorswim_local_mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/schwab-mcp-builder/: SKILL.md
.claude/skills/schwab-mcp-builder/references/: architecture.md  (+1 more)
docs/: ARCHITECTURE.md  SCHWAB_API_REFERENCE.md  TOOLS_REFERENCE.md
docs/phases/: PHASE-1-FOUNDATION.md  PHASE-2-GEX-ENGINE.md  PHASE-3-VOLATILITY.md  PHASE-3B-HISTORY.md  PHASE-4-TRADE-MATH.md  PHASE-5-REMAINING-TOOLS.md
scripts/: authenticate.py  start.sh
src/: __main__.py  prompts.py  resources.py  server.py
src/core/: __init__.py  alert_engine.py  gex_calculator.py  gex_levels.py  iv_context.py  snapshot_store.py  trade_math.py  vix_context.py  volatility.py
src/data/: cache.py  models.py  schwab_client.py  token_manager.py
src/shared/: logging.py  requests.py  retry.py
src/tools/: gex.py  history.py  market_data.py  market_extras.py  trade_math.py  volatility.py
tests/: conftest.py  test_alert_engine.py  test_cache.py  test_gex_calculator.py  test_gex_levels.py  test_gex_tools.py  test_history_tools.py  test_iv_context.py  test_market_data.py  test_market_extras_client.py  test_market_extras_tools.py  test_models.py  test_prompts.py  test_requests.py  test_resources.py  test_retry.py  test_schwab_client.py  test_snapshot_store.py  test_token_manager.py  test_trade_math_core.py  test_trade_math_tools.py  test_vix_context.py  test_volatility_core.py  test_volatility_tools.py
tests/fixtures/: factories.py  spx_chain_response.json  spx_quote_response.json
