[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkorswim-local-mcp"
version = "0.1.0"
description = "MCP server for Schwab options data and GEX analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "schwabdev>=3.0.0",
    "pydantic>=2.0",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
